variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: not found: value dejaFait
dejaFait = 0
^Variables:8: error: not found: value dejaFait
while (dejaFait!=x) {
       ^