variables.Variables.scala.code
var x: Int = 0
while (estSurBiscuit==false) {
  avance()
  x+=1
  prendBiscuit()
}
dejaFait = 0
while (dejaFait!=x) {
  recule()
}
poseBiscuit